<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enable_update_notifications">Notify about updates?</string>
    <string name="install_update">Install update</string>
    <string name="install_usual_version">Install usual version</string>
    <string name="install_testonly_version">Install testonly version</string>
    <string name="select_app_version">Select app version</string>
    <string name="reload">Reload</string>
    <string name="latest_version">Latest version: %1$s</string>
    <string name="update_app"><![CDATA[You can install a new version of the app. <strong>Don\'t forget to reactivate accessibility service after update!</strong>]]></string>
    <string name="install_testonly"><![CDATA[You have the latest version, but you don\'t have the testOnly version of the app installed. The testOnly app version has several advantages. You can read more on <a href="https://github.com/bakad3v/Android-AntiForensic-Tools?tab=readme-ov-file#apps-versions">GitHub</a>. <strong>Don\'t forget to reactivate accessibility service after update!</strong>]]></string>
    <string name="testonly_update_warning"><![CDATA[<p><strong>Warning: if you will update from usual to testOnly version of the app, device admin rights would be revoken and you would need to enable them again manually.</strong></p>]]></string>
    <string name="up_to_date">You\'re up to date</string>
    <string name="app_update_center">App update center</string>
</resources>
